fixing pie chart spacing

--- a/frontend/src/app/components/pie-chart/pie-chart.component.css
+++ b/frontend/src/app/components/pie-chart/pie-chart.component.css
@@ -9,11 +9,12 @@ ngx-charts-pie-chart {
   display: block;
   margin: 0 auto;
   align-items: center;
-  margin-bottom: 5%;
+  margin-bottom: 10%;
   width: 80%;
-  height:90%;
+  height: 80%;
   overflow: hidden; /* Hide scrollbars */
 }
+
 .pie-chart-container {
   background-color: #fff7e6;
   border: 1px solid #ddd;
@@ -35,14 +36,4 @@ ngx-charts-pie-chart {
   width: 100%;
   height: 100%;
   overflow: hidden; /* Hide scrollbars */
-}
-
-.pie-chart-container:hover {
-  background-color: #fff;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-  transform: translateY(-5px);
-}
-
-h2 {
-  padding-top: 3%;
 }
